Replace Stream#toList to Stream#collect(Collectors.toList())
Reduce dependency requirement for higher JDK/JDK16.

Fixes https://github.com/robolectric/robolectric/issues/10419.

Signed-off-by: utzcoz <utzcoz@outlook.com>